plugins/kotlin/idea/tests/testData/gradle/hmppImportAndHighlighting/hmppLibAndConsumer/lib-and-app/lib/src/iosMain/kotlin/LibIosMain.kt.after
package com.h0tk3y.hmpp.klib.demo

import kotlinx.cinterop.CArrayPointer

actual class <!LINE_MARKER("descr='Has expects in lib-and-app.lib.commonMain module'")!>LibCommonMainExpect<!> actual constructor(): LibCommonMainInterface {
    actual fun <!LINE_MARKER("descr='Has expects in lib-and-app.lib.commonMain module'")!>libCommonMainExpectFun<!>() {
        println("actualized in iosMain")
        libCommonMainTopLevelFun()
        println(CArrayPointer::class)
    }

    fun additionalFunInIosActual() {
        println("additional fun in lib iosMain")
    }
}
